--- a/ruoyi-framework/pom.xml
+++ b/ruoyi-framework/pom.xml
@@ -8,15 +8,10 @@
         <version>3.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-	
     <artifactId>ruoyi-framework</artifactId>
-	
-	<description>
-	    framework框架核心
-	</description>
+	<description>framework框架核心</description>
     
     <dependencies>
-
         <!-- SpringBoot Web容器 -->
 	     <dependency>
             <groupId>org.springframework.boot</groupId>
