--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -10,10 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 	
     <artifactId>ruoyi-common</artifactId>
-	
-	<description>
-	    common通用工具
-	</description>
+	<description>common通用工具</description>
 
     <properties>
         <commons.io.version>2.5</commons.io.version>
@@ -23,7 +20,6 @@
     </properties>
 
     <dependencies>
-    
         <!--常用工具类 -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -69,7 +65,5 @@
 		    <groupId>org.yaml</groupId>
 		    <artifactId>snakeyaml</artifactId>
 		</dependency>
-		
     </dependencies>
-  
 </project>
