--- a/ruoyi-generator/pom.xml
+++ b/ruoyi-generator/pom.xml
@@ -10,17 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ruoyi-generator</artifactId>
-	
-	<description>
-	    generator代码生成
-	</description>
+	<description>generator代码生成</description>
 	
 	<properties>
         <velocity.version>1.7</velocity.version>
     </properties>
 
     <dependencies>
-    
         <!--velocity代码生成使用模板 -->
         <dependency>
             <groupId>org.apache.velocity</groupId>
@@ -35,5 +31,4 @@
             <version>${ruoyi.version}</version>
         </dependency>
     </dependencies>
-	
 </project>
